tilt/web/deployment/ingress.yaml
---
# Source: deployment/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /accounts
        pathType: Prefix
        backend:
          service:
            name: gateway-svc-tyk
            port:
              number: 8080
          
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-svc-tyk
            port:
              number: 8080
          
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 4200
